; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_deprecated.c_svn_opt_subcommand_help.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_deprecated.c_svn_opt_subcommand_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"\22%s\22: unknown command.\0A\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"svn: \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @svn_opt_subcommand_help(i8* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32* @svn_opt_get_canonical_subcommand(i32* %11, i8* %12)
  store i32* %13, i32** %9, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %23

16:                                               ; preds = %4
  %17 = load i32*, i32** %9, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* @TRUE, align 4
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* @stdout, align 4
  %22 = call i32* @print_command_info(i32* %17, i32* %18, i32 %19, i32* %20, i32 %21)
  store i32* %22, i32** %10, align 8
  br label %29

23:                                               ; preds = %4
  %24 = load i32, i32* @stderr, align 4
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @_(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %27 = load i8*, i8** %5, align 8
  %28 = call i32* @svn_cmdline_fprintf(i32 %24, i32* %25, i32 %26, i8* %27)
  store i32* %28, i32** %10, align 8
  br label %29

29:                                               ; preds = %23, %16
  %30 = load i32*, i32** %10, align 8
  %31 = icmp ne i32* %30, null
  br i1 %31, label %32, label %39

32:                                               ; preds = %29
  %33 = load i32*, i32** %10, align 8
  %34 = load i32, i32* @stderr, align 4
  %35 = load i32, i32* @FALSE, align 4
  %36 = call i32 @svn_handle_error2(i32* %33, i32 %34, i32 %35, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %37 = load i32*, i32** %10, align 8
  %38 = call i32 @svn_error_clear(i32* %37)
  br label %39

39:                                               ; preds = %32, %29
  ret void
}

declare dso_local i32* @svn_opt_get_canonical_subcommand(i32*, i8*) #1

declare dso_local i32* @print_command_info(i32*, i32*, i32, i32*, i32) #1

declare dso_local i32* @svn_cmdline_fprintf(i32, i32*, i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @svn_handle_error2(i32*, i32, i32, i8*) #1

declare dso_local i32 @svn_error_clear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
